--- a/package.json
+++ b/package.json
@@ -14,16 +14,23 @@
     "last 2 ios version"
   ],
   "dependencies": {
-    "core-js": "^3.4.8",
-    "jquery": "^3.4.1"
+    "axios": "^0.19.0",
+    "core-js": "^3.3.6",
+    "jquery": "^3.4.1",
+    "uikit": "^3.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/core": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "autoprefixer": "^9.7.1",
     "babel-loader": "^8.0.6",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-stream": "^5.2.1"
